# peek-rs

./: Cargo.toml
ai/: Cargo.toml
ai/src/: lib.rs
chat/: Cargo.toml
chat/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs  postgres.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs  tools.rs
