[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
  "postgres",
  "mysql",
  "uuid",
  "chrono",
  "rust_decimal",
  "runtime-tokio",
  "tls-rustls",
] }
uuid = "1.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
