[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ai.workspace = true
config.workspace = true
db.workspace = true
anyhow = "1.0.100"
colored = "3.1.1"
serde_json = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
cliclack = "0.3.8"
comfy-table = "7.2.2"
